# study

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  AGENTS_WORK_TEMPLATE.md  PROJECT_INTENT.md  README.md  USECASE.md  WORK_20260409_HTTP_CLIENT_TIMEOUT.md  WORK_20260413_INTERVIEW_PROMOTION_SPRING_BOOT_JAR_STARTUP.md  WORK_20260413_KNOWLEDGE_CARDS_ROLE_CLARIFICATION.md  WORK_20260413_STUDY_EXPLANATION_DEEP_SKILL_REFACTOR.md  WORK_20260414_COMPONENT_TO_COMPOSITION_EXPLANATION_FEEDBACK.md  WORK_20260414_HISTORICAL_CONTEXT_AND_LIST_STYLE_FEEDBACK.md  WORK_20260414_SPRING_BOOT_JAR_STARTUP_REFACTOR.md  WORK_20260414_STUDY_EXPLANATION_STYLE_FEEDBACK_ROUND2.md  WORK_20260414_STYLE_DRIFT_PREVENTION_AND_SOURCE_FLOW.md  WORK_20260414_STYLE_PROFILE_EXTRACTION.md  WORK_20260416_JAVA_SOCKET_CONNECTION_RESET_TROUBLESHOOTING.md  WORK_20260423_SPRING_CONFIG_PRUNE_SCRIPT.md
ai/: ocr_scanned_pdf.md  (+4 more)
computer_architecture/ostep/: Cargo.toml  enter_docker  enter_docker.root
computer_architecture/ostep/docs/: summary.md  troubleshooting.md
computer_architecture/ostep/ostep_by_rust/: Dockerfile  run_docker  virtualization_cpu
computer_architecture/ostep/ostep_by_rust/docs/: summary.md
computer_architecture/ostep/ostep_by_rust/docs/snippets/: pointer_to_struct.rs
computer_architecture/ostep/src/: chapters.rs  main.rs
computer_architecture/ostep/src/chapters/concurrency/: locks.rs
computer_architecture/ostep/src/chapters/introduction/: concurrency.rs  cpu.rs  mod.rs
computer_architecture/ostep/src/util/: args.rs
computer_architecture/ostep/xv6-riscv/: .markdownlint.json  Makefile  NOTE.md  README.md
computer_architecture/ostep/xv6-riscv/examples/: kernel.elf.objdump  virt.dtb  virt.dts
computer_architecture/ostep/xv6-riscv/kernel/: defs.h  entry.S  kernel.ld  main.c  printf.c  start.c
rust/examples/encoded_to_json/: Cargo.toml  README.md  encoded_to_json.md
rust/examples/encoded_to_json/src/: encoding_type.rs  main.rs  parser.rs
rust/examples/learn-rust/: Cargo.toml  README.md
rust/examples/learn-rust/ch01_ownership/: Cargo.toml
(+1952 files in other folders)
