[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.99"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
